[gd_scene load_steps=4 format=3 uid="uid://sr51v8gkwnax"]

[ext_resource type="Texture2D" uid="uid://dk6g2owqwy04h" path="res://assets/poison_stream.png" id="1_ok555"]
[ext_resource type="Script" path="res://mobs/poison_stream.gd" id="1_vkmhx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lm054"]
radius = 3.0
height = 52.0

[node name="PoisonStream" type="Area2D"]
collision_layer = 16
collision_mask = 11
script = ExtResource("1_vkmhx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lm054")

[node name="PoisonStream" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_ok555")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-43, 0)
scale = Vector2(0.5, 0.5)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
